# app/pb_public/openapi.json
@@ -888,6 +888,13 @@
                         "assignee": {
                           "type": "string"
                         },
+                        "start_date": {
+                          "type": [
+                            "string",
+                            "null"
+                          ],
+                          "example": "2026-08-24 00:00:00.000Z"
+                        },
                         "due_date": {
                           "type": "string"
                         },
@@ -1351,6 +1358,13 @@
                         "type": "integer",
                         "minimum": 0,
                         "maximum": 9999
+                      },
+                      "start_date": {
+                        "type": [
+                          "string",
+                          "null"
+                        ],
+                        "example": "2026-08-24 00:00:00.000Z"
                       },
                       "due_date": {
                         "type": [
